include/dss_capi.h

    enum LineUnits {
        LineUnits_none = 0, // No line length unit.
        LineUnits_Miles = 1, // Line length units in miles.
        LineUnits_kFt = 2, // Line length units are in thousand feet.
        LineUnits_km = 3, // Line length units are km.
        LineUnits_meter = 4, // Line length units are meters.
        LineUnits_ft = 5, // Line units in feet.
        LineUnits_inch = 6, // Line length units are inches.
        LineUnits_cm = 7, // Line units are cm.
        LineUnits_mm = 8, // Line length units are mm.
        LineUnits_Maxnum = 9 // Maximum number of line units constants.
    };
    DSS_CAPI_DLL int32_t TSData_Get_Count(void);
    DSS_CAPI_DLL int32_t TSData_Get_First(void);
    DSS_CAPI_DLL int32_t TSData_Get_Next(void);
    DSS_CAPI_DLL char *TSData_Get_Name(void);
    DSS_CAPI_DLL void TSData_Set_Name(char *Value);
    DSS_CAPI_DLL void TSData_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void TSData_Get_AllNames_GR(void);
    DSS_CAPI_DLL double TSData_Get_Rdc(void);
    DSS_CAPI_DLL void TSData_Set_Rdc(double Value);
    DSS_CAPI_DLL double TSData_Get_Rac(void);
    DSS_CAPI_DLL void TSData_Set_Rac(double Value);
    DSS_CAPI_DLL double TSData_Get_GMRac(void);
    DSS_CAPI_DLL void TSData_Set_GMRac(double Value);
    DSS_CAPI_DLL int32_t TSData_Get_GMRUnits(void);
    DSS_CAPI_DLL void TSData_Set_GMRUnits(int32_t Value);
    DSS_CAPI_DLL double TSData_Get_Radius(void);
    DSS_CAPI_DLL void TSData_Set_Radius(double Value);
    DSS_CAPI_DLL int32_t TSData_Get_RadiusUnits(void);
    DSS_CAPI_DLL void TSData_Set_RadiusUnits(int32_t Value);
    DSS_CAPI_DLL int32_t TSData_Get_ResistanceUnits(void);
    DSS_CAPI_DLL void TSData_Set_ResistanceUnits(int32_t Value);
    DSS_CAPI_DLL double TSData_Get_Diameter(void);
    DSS_CAPI_DLL void TSData_Set_Diameter(double Value);
    DSS_CAPI_DLL double TSData_Get_NormAmps(void);
    DSS_CAPI_DLL void TSData_Set_NormAmps(double Value);
    DSS_CAPI_DLL double TSData_Get_EmergAmps(void);
    DSS_CAPI_DLL void TSData_Set_EmergAmps(double Value);
    DSS_CAPI_DLL double TSData_Get_EpsR(void);
    DSS_CAPI_DLL void TSData_Set_EpsR(double Value);
    DSS_CAPI_DLL double TSData_Get_InsLayer(void);
    DSS_CAPI_DLL void TSData_Set_InsLayer(double Value);
    DSS_CAPI_DLL double TSData_Get_DiaIns(void);
    DSS_CAPI_DLL void TSData_Set_DiaIns(double Value);
    DSS_CAPI_DLL double TSData_Get_DiaCable(void);
    DSS_CAPI_DLL void TSData_Set_DiaCable(double Value);
    DSS_CAPI_DLL double TSData_Get_DiaShield(void);
    DSS_CAPI_DLL void TSData_Set_DiaShield(double Value);
    DSS_CAPI_DLL double TSData_Get_TapeLayer(void);
    DSS_CAPI_DLL void TSData_Set_TapeLayer(double Value);
    DSS_CAPI_DLL double TSData_Get_TapeLap(void);
    DSS_CAPI_DLL void TSData_Set_TapeLap(double Value);
    DSS_CAPI_DLL int32_t TSData_Get_idx(void);
    DSS_CAPI_DLL void TSData_Set_idx(int32_t Value);